--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "console": "integratedTerminal",
             "justMyCode": true,
             "args": [
-                "${workspaceFolder}\\tests\\test.txt"
+                "${workspaceFolder}\\Examples\\Find.tapi"
             ]
         }
 
